--- a/WorshipNight/questions.html
+++ b/WorshipNight/questions.html
@@ -102,7 +102,7 @@
   <div class="formcontainer">
   <h1>Have Prayer Requests?</h1>
   <form id="contact-form-questions">
-    <input style="margin-bottom:0px; border-bottom-left-radius: 0px; border-bottom-right-radius: 0px;" name="name" placeholder="Your name" required />
+    <input style="margin-bottom:0px; border-bottom-left-radius: 0px; border-bottom-right-radius: 0px;" name="name" placeholder="Your name (totally optional!)" required />
     <input style="margin:0px; border-radius: 0px; border-top:1px solid #ffc600" type="email" name="email" placeholder="Your email" required />
     <textarea style="margin-top:0px; border-top-left-radius: 0px; border-top-right-radius: 0px; border-top:1px solid #ffc600" name="message" placeholder="Your message" required></textarea>
     <button type="submit">Send</button>
