--- a/WorshipNight/index.html
+++ b/WorshipNight/index.html
@@ -98,8 +98,8 @@
 <body>
   <img src="images/wordmark.PNG" style="max-width:600px; cursor: pointer;" onclick="window.location.href='index.html'">
   <div style="text-align: center; margin-top: 20px; display: flex; justify-content: center; gap: 20px;">
-      <a href="decisions.html" style="display: inline-block; padding: 1rem 5rem; background-color: #ffc600; border-radius: 20px; color: black; text-decoration: none; border: none; cursor: pointer; transition: background-color 0.3s; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);">Decisions</a>
-      <a href="questions.html" style="display: inline-block; padding: 1rem 5rem; background-color: #ffc600; border-radius: 20px; color: black; text-decoration: none; border: none; cursor: pointer; transition: background-color 0.3s; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);">Questions</a>
+      <a href="decisions.html" style="display: inline-block; padding: 1rem 5rem; background-color: #ffc600; border-radius: 20px; color: black; text-decoration: none; border: none; cursor: pointer; transition: background-color 0.3s; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);">Made a Decision?</a>
+      <a href="questions.html" style="display: inline-block; padding: 1rem 5rem; background-color: #ffc600; border-radius: 20px; color: black; text-decoration: none; border: none; cursor: pointer; transition: background-color 0.3s; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);">Request Prayer</a>
   </div>
 </body>
 </html>
