--- a/about.html
+++ b/about.html
@@ -87,14 +87,14 @@
         <a style="opacity: 0.25; cursor: not-allowed; display: none;" class="glowbutton">Related Projects [coming soon]</a>
     </section>
 
-    <section style="padding-top: 200px; padding-left:20px; height: 80vh;">
+    <!--<section style="padding-top: 200px; padding-left:20px; height: 80vh;">
         <h1 data-aos="fade-right">I play piano/keyboard, drums, and about four guitar chords.</h1>
     </section>
 
     <section style="padding-top: 200px; padding-left:20px; height: 80vh;">
         <h1 data-aos="fade-right">I like to take photos and videos, like these:</h1>
         
-    </section>
+    </section>-->
 
 
     <div style="background: #202020;">
