--- a/WorshipNight/decisions.html
+++ b/WorshipNight/decisions.html
@@ -144,26 +144,27 @@
     <div class="form-page welcome-page active" data-page="1">
       <h2>Welcome!</h2>
       <div class="progress-bar"></div>
-      <p style="margin-bottom:40px;">We're enthralled to hear about your decision to follow Christ. Let's take a moment to document this important step in your faith journey.</p>
+      <p style="margin-bottom:40px;">We want to come alongside you in your walk with Christ! Whether you've made a decision or still have questions, we encourage you to reach out and get connected.</p>
       <button type="button" onclick="nextPage(1)">Begin</button>
     </div>
 
     <!-- Name and Decision Page -->
     <div class="form-page" data-page="2">
-      <h2>Your Decision</h2>
+      <h2>Gospel Responses</h2>
       <div class="progress-bar"></div>
       <input style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; margin-bottom:0px" name="name" placeholder="Your name" required />
       <select name="decision" required>
-        <option value="" disabled selected>Select your decision</option>
+        <option value="" disabled selected>Select</option>
         <option value="accepted">I have accepted the gospel for the first time</option>
         <option value="rededicated">I have rededicated my life to Christ</option>
+        <option value="questions">I still have some questions</option>
       </select>
       <button type="button" onclick="nextPage(2)">Next</button>
     </div>
 
     <!-- Message Page -->
     <div class="form-page" data-page="3">
-      <h2>Share Your Story</h2>
+      <h2>Tell us about your decision or ask a question!</h2>
       <div class="progress-bar"></div>
       <textarea style="height:100px" name="message" placeholder="Tell us about your decision..." required></textarea>
       <button type="button" onclick="nextPage(3)">Next</button>
@@ -173,7 +174,7 @@
     <div class="form-page" data-page="4">
       <h2>Stay Connected</h2>
       <div class="progress-bar"></div>
-      <p>We'd love to keep in touch and support you on your journey.</p>
+      <p>We'd love to support you on your journey.</p>
       <input type="email" name="email" placeholder="Your email" required />
       <button type="button" onclick="submitForm()">Submit</button>
     </div>
@@ -182,7 +183,7 @@
     <div class="form-page" data-page="5">
       <h2>Thank You!</h2>
       <div class="progress-bar"></div>
-      <p style="margin-bottom:40px;">We're so excited about your decision and commitment to follow Christ. We'll be reaching out to you soon to provide support and guidance on your journey.</p>
+      <p style="margin-bottom:40px;">We're so excited to walk alongside you as we all grow closer to Christ. We have an amazing team that will be in contact with you soon.</p>
       <button type="button" onclick="resetForm()">Start Over</button>
     </div>
   </div>
