--- a/WorshipNight/decisions.html
+++ b/WorshipNight/decisions.html
@@ -166,7 +166,7 @@
     <div class="form-page" data-page="3">
       <h2>Tell us about your decision or ask a question!</h2>
       <div class="progress-bar"></div>
-      <textarea style="height:100px" name="message" placeholder="Tell us about your decision..." required></textarea>
+      <textarea style="height:100px" name="message" placeholder="Share your story... no matter where you're at" required></textarea>
       <button type="button" onclick="nextPage(3)">Next</button>
     </div>
 
