--- a/WorshipNight/decisions.html
+++ b/WorshipNight/decisions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Worship Night '25</title>
+  <title>Gospel Responses | Worship Night '25</title>
   <meta property="og:image" content="images/worshipnightannouncement.PNG" />
   <meta property="og:title" content="Worship Night" />
   <meta property="og:type" content="website" />
