local shortcut ux

--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -286,20 +286,13 @@
 		<p id="qrcodelinkcautiontext" class="texttip" style="margin-bottom:50px;">
                     Be cautious of sharing personal information
                 </p>
-		<div id="localshortcutcontainerdiv" class="localshortcutcontainerdiv" style="border-radius: 20px; background: #00df52; margin-bottom:125px; color: black; padding:20px; min-width:fit-content; max-width: 75%;">
-                        <p style="color:black; font-size:27px;"><i class="fa-solid fa-location-pin-lock"></i> Local Shortcut</p>
-                        <p style="color:black;" class="texttip">
-                            For a dynamic bookmark that updates with changes saved</br>to Dashboard, use your personal Local Shortcut link
-                        </p>
-			<input id="locallinkinput" class="localshortcutinput" />
-                	<button style="background:transparent; border:none; outline:none; cursor:pointer">
-                    		<i title="Copy Local Shortcut" class="fa fa-clone" style="transform:scale(1.75); padding-left:10px; color:#000000;" onclick="copyinputtextlocalshortcutlink(); showToast('Local Shortcut link copied', 'success');"></i>
-                	</button>
-                    <br>
-            <a style="color: black; font-family:'Dosis'; margin-top:20px;" class="aintext" href="docs#dashboard" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-circle-info"></i> More info</a>
-			<br>
-			<br>
-                </div>
+
+                <a href="#localshortcutcontainerdiv" id="localshortcutcontainerdivtooltip" class="localshortcutcontainerdivtooltip aintext" style="border-radius: 2000px; background: #00df52; margin-bottom:30px; color: black; padding-left:15px; padding-right: 15px; min-width:fit-content; max-width:75%;">
+                    <p style="color:black;" class="texttip">
+                        View your personal shortcut <i class="fa-solid fa-chevron-right"></i>
+                    </p>
+                </a>
+
                 <h1 id="customizationoptions">Customization</h1>
                 <br>
                 <br>
@@ -566,6 +559,20 @@
         <Br>
         <br>
         <br>
+        <div id="localshortcutcontainerdiv" class="localshortcutcontainerdiv" style="border-radius: 20px; background: #00df52; margin-bottom:50px; color: black; padding:20px; min-width:fit-content; max-width:65%;">
+            <p style="color:black; font-size:27px;"><i class="fa-solid fa-location-pin-lock"></i> Local Shortcut</p>
+            <p style="color:black; max-width: 70%;" class="texttip">
+                A dynamic bookmark that updates with changes saved to your Dashboard
+            </p>
+    <input id="locallinkinput" class="localshortcutinput" />
+        <button style="background:transparent; border:none; outline:none; cursor:pointer">
+                <i title="Copy Local Shortcut" class="fa fa-clone" style="transform:scale(1.75); padding-left:10px; color:#000000;" onclick="copyinputtextlocalshortcutlink(); showToast('Local Shortcut link copied', 'success');"></i>
+        </button>
+        <br>
+    <a style="color: black; font-family:'Dosis'; margin-top:20px;" class="aintext" href="docs#dashboard" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-circle-info"></i> More info</a>
+    <br>
+    <br>
+    </div>
     <a id="soce" class="disabled" onclick="soce();"><i class="fa-solid fa-volume-mute"></i> Disable End Sounds</a>
     <a id="memsav" class="disabled" onclick="memsav();"><i class="fa-solid fa-gauge-high"></i> Memory Saver</a>
 	<a id="contrast" class="disabled" onclick="contrast();"><i class="fa-solid fa-circle-half-stroke"></i> Increase Contrast</a>
