--- a/mcacountdown/docs.html
+++ b/mcacountdown/docs.html
@@ -548,11 +548,11 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
             <h2>How to Update Countdowns</h2>
             <p>If you've saved a Countdown to your Dashboard, but have made changes since, it's easy to save the new changes to your Dashboard. Simply open Options, and click the same button as you did when initially saving it. If there have been changes made compared to the version in Dashboard, it should say Update. If you change the Title of the Countdown, it is no longer the same Countdown and needs to be resaved.</p>
             <h2>What is a Local Shortcut?</h2>
-            <p>When you copy a link to a Countdown, it will always point to the version you linked. Any changes you make later won't be reflected in that link.</p>
-            <p>Local Shortcuts, on the other hand, let you link to a Countdown in your dashboard. Instead of linking to a specific version, they always point to the most up-to-date version in your Dashboard.</p>
-            <p>You can use this by creating a bookmark to your Local Shortcut in your browser. This way, you won't have to change out your bookmark with the new Countdown link every time you make changes, as the Local Shortcut will always reflect the latest version in your Dashboard.</p>
+            <p>When you copy a regular Countdown link, it always points to the exact version you copied. Any changes you make later aren't reflected in that link.</p>
+            <p>Local Shortcuts work differently by letting you link to a Countdown stored in your dashboard. Instead of linking to a fixed URL, they always point to the most up-to-date version you've saved.</p>
+            <p>This means you don't have to worry about re-bookmarking or copying a new link when you make changes.</p>
             <h2>I Don't See My Local Shortcut, Where Is It?</h2>
-            <p>Local Shortcuts appear in the General section of Options. They only show up once you have saved your countdown to Dashbaord.</p>
+            <p>Local Shortcuts appear in the Ease of Use section of Personal Options. They only show up once you have saved your countdown to Dashbaord.</p>
         </div>
         <div id="sharing" class="section">
             <h1>How to Share Countdowns</h1>
