--- a/mcacountdown/docs.html
+++ b/mcacountdown/docs.html
@@ -497,7 +497,7 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
         </div>
         <div id="export-cal-to-schedule" class="section">
             <h1>Export Calendars to Schedule</h1>
-            <p>Learn how to export calendars from multiple services to Countdown. We will be covering Google Calendar, iCloud/MacOS Calendar, and Outlook Calendar</p>
+            <p>Export calendars from Google, iCloud, and Outlook to Countdown.</p>
             <h2>Google Calendar</h2>
             <p class="warning"><i class="fa-solid fa-triangle-exclamation"></i> You cannot, as of now, export calendars from the Google Calendar app. You must use the desktop website.</p>
             <p>To export from Google Calendar, follow these steps:</p>
@@ -508,7 +508,7 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
                 <li>Under that calendar's options, pick "Export calendar"</li>
                 <li>You should now have a .ics file that Countdown can use to make your schedule!</li>
             </ol>
-            <h2>iCloud/MacOS Calendar</h3>
+            <h2>iCloud/MacOS Calendar</h2>
             <p>To export from iCloud/MacOS Calendar, follow these steps:</p>
             <ol>
                 <li>Open the Calendar <img src="https://help.apple.com/assets/65D689DF13D1B1E17703916F/65D689E0D302CF88600FDD25/en_US/2162f7d3de310d2b3503c0bbebdc3d56.png" alt="" height="15" width="15" originalimagename="SharedGlobalArt/AppIconTopic_Calendar.png"> app on your Mac</li>
@@ -517,7 +517,7 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
                 <li>Select your save location, and click Export</li>
                 <li>Your .ics file should now be saved to your selected save location, ready for Countdown to make your schedule with</li>
             </ol>
-            <h2>Outlook Calendar</h3>
+            <h2>Outlook Calendar</h2>
                 <p>To export from Outlook Calendar, follow these steps:</p>
                 <ol>
                     <li>In Outlook, select the calendar you want to export</li>
@@ -530,8 +530,8 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
         <div id="timekeeper" class="section">
             <h1>What Is Timekeeper?</h1>
             <p>Learn about Countdown's intelligent features and how you can use them to save precious time</p>
-            <h2>What features make up Timekeeper?</h3>
-            <p>Timekeeper features can be found across Countdown, mainly making it easy to set up your countdown</p>
+            <h2>What features make up Timekeeper?</h2>
+            <p>Timekeeper features can be found across Countdown, mainly making it easy to set up your Countdown</p>
             <ol>
                 <li>When creating a Countdown, you'll see the <i class="fa-solid fa-compass"></i> Timekeeper bar at the bottom of the screen, suggesting the next upcoming event or guiding you to pick your own date</li>
                 <li>Similarly, in the Options menu, you can use the <i class="fa-solid fa-business-time"></i> Second Sense date preset to find the next upcoming holiday or event</li>
@@ -544,7 +544,7 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
             <p>Although there are multiple methods of saving or sharing Countdowns, they can be simplified down to sharing a copy, or saving locally</p>
             <p>Countdown Dashboard saves your Countdowns locally, on your device, and allows you to save any changes you make</p>
             <h2>How Do I Save To Dashboard?</h2>
-            <p>Saving your countdown to Dashboard is simple. From the options menu, click the <i class="fa-solid fa-star"></i> Save button. You should see a toast in the top right telling you it successfully saved. If you've already saved the Countdown, the button may say Saved or Update.</p>
+            <p>Saving your Countdown to Dashboard is simple. From the options menu, click the <i class="fa-solid fa-star"></i> Save button. You should see a toast in the top right telling you it successfully saved. If you've already saved the Countdown, the button may say Saved or Update.</p>
             <h2>How to Update Countdowns</h2>
             <p>If you've saved a Countdown to your Dashboard, but have made changes since, it's easy to save the new changes to your Dashboard. Simply open Options, and click the same button as you did when initially saving it. If there have been changes made compared to the version in Dashboard, it should say Update. If you change the Title of the Countdown, it is no longer the same Countdown and needs to be resaved.</p>
             <h2>What is a Local Shortcut?</h2>
@@ -552,19 +552,19 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
             <p>Local Shortcuts work differently by letting you link to a Countdown stored in your dashboard. Instead of linking to a fixed URL, they always point to the most up-to-date version you've saved.</p>
             <p>This means you don't have to worry about re-bookmarking or copying a new link when you make changes.</p>
             <h2>I Don't See My Local Shortcut, Where Is It?</h2>
-            <p>Local Shortcuts appear in the Ease of Use section of Personal Options. They only show up once you have saved your countdown to Dashbaord.</p>
+            <p>Local Shortcuts appear in the Ease of Use section of Personal Options. They only show up once you have saved your Countdown to Dashboard.</p>
         </div>
         <div id="sharing" class="section">
             <h1>How to Share Countdowns</h1>
             <p>Although there are multiple methods of saving or sharing Countdowns, they can be simplified down to sharing a copy, or saving locally</p>
-            <p>This will inform you on how to share a copy of your Countdown.</p>
+            <p>Sharing your Countdown is simple. Here's how:</p>
             <h2>What Gets Shared?</h2>
             <p>Countdown's options are divided into two distinct categories- Shareable Options and Personal Options.</p>
             <p>Shareable options are just how they sound, they get shared in the link. They include the date, title, colors or background, typeface, confetti options, ending sound and progress bar of the Countdown. Additionally, if it's a Countdown Schedule, your entire Schedule will be stored in the link.</p>
             <p>Personal options store options that are only for you. You can read more about them on the 'The Difference Between Shareable and Personal Options' support doc. These options will not be shared in the link.</p>
             <p class="warning"><i class="fa-solid fa-triangle-exclamation"></i> Always be cautious when sharing personal information. If you put personal information in your Countdown, the link will still contain that information.</p>
             <h2>Sharing a Link</h2>
-            <p>You can send anyone a link to your countdown, which can be found in your General Options. There is a Copy Link button to the right of the link, allowing you to simply copy the link to your clipboard.</p>
+            <p>You can send anyone a link to your Countdown, which can be found in your General Options. There is a Copy Link button to the right of the link, allowing you to simply copy the link to your clipboard.</p>
             <p>When you copy a link to a Countdown, it will always point to the version you linked. Any changes you make later won't be reflected in that link, unlike in Local Shortcuts (a feature of Countdown Dashboard).</p>
             <h2>Sharing a QR Code</h2>
             <p>Countdown will automatically generate a QR Code for your Countdown. You can find this below the link for your Countdown, in the General Options.</p>
@@ -578,8 +578,8 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
             <p>Shareable options are just how they sound, they get shared in the link. They include the date, title, colors or background, typeface, confetti options, ending sound and progress bar of the Countdown. Additionally, if it's a Countdown Schedule, your entire Schedule will be stored in the link.</p>
             <h2>What are Personal Options?</h2>
             <p>Personal options store options that are only for you. They include accessibility and ease of use options that allow users to make Countdowns to work better for them.</p>
-            <p>For that reason, Personal options cannot be shared in a link, as they are designed to accomidate a user, not a Countdown. Instead, they're stored as cookies in the browser. This way, they're applied across all Countdowns.</p>
-            <p>Personal options include animation speed, labeling time units, disbling confetti, disabling ending sounds, saving memory when inactive, increasing contrast, and only including certani time units.</p>
+            <p>For that reason, Personal options cannot be shared in a link, as they are designed to accommodate a user, not a Countdown. Instead, they're stored as cookies in the browser. This way, they're applied across all Countdowns.</p>
+            <p>Personal options include animation speed, labeling time units, disabling confetti, disabling ending sounds, saving memory when inactive, increasing contrast, and only including certain time units.</p>
         </div>
         <div id="cookiepolicy" class="section">
             <h1>Cookie Policy</h1>
