--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -623,7 +623,7 @@
     <h1 id="inclusionoptions" class="textelement">
         Formatting
     </h1>
-	<p id="cdscheduledisclaimer" style="font-family: 'Dosis', sans-serif; font-size:16px; margin-bottom:30px; display:none; background:linear-gradient(to bottom right, #d616165f, #00000000); border:#ff5353 2px solid; border-radius:100px; padding:5px 10px 5px 10px; width:fit-content;"><i class="fa-regular fa-calendar-xmark"></i> Only Display will not apply to Countdown Schedules</p>
+	<p id="cdscheduledisclaimer" style="font-family: 'Dosis', sans-serif; font-size:16px; margin-bottom:30px; display:none; background:linear-gradient(to bottom right, #d616165f, #00000000); border:#ff5353 2px solid; border-radius:100px; padding:5px 10px 5px 10px; width:fit-content;"><i class="fa-regular fa-calendar-xmark"></i> Time Breakdown will not apply to Countdown Schedules</p>
         <Br>
         <br>
         <br>
