fixing some stuff

--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -19,7 +19,7 @@
     <title>Countdown</title>
 
     <script src="Dependencies/confetti.js"></script>
-    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+    <script src="Dependencies/qrcode.min.js"></script>
 
 	<link rel="stylesheet" id="stylesheetmain" href="betastyle.css"/>
     <style id="animationHandler"></style>
